--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
             </div>
             <div class="nav-search">
                 <select class="search-select">
-                    <option>ALL</option>
+                    <option value="All">ALL</option>
+                    <option value="Mens">Mens</option>
+                    <option value="Womens">Womens</option>
+                    <option value="Kids">Kids</option>
+                    <option value="Skin Care">Skin Care</option>
+                    <option value="Electronics">Electronics</option>  
+                    <option value="Furniture">Furniture</option>
                 </select>   
                 <input type="text" placeholder="Search Amazon.in" class="search-input">
                 <div class="search-icon">
